@@ -389,6 +389,11 @@
 			return $nameList;
 		}
 		
+		public function getFields()
+		{
+			return $this->fields;
+		}
+		
 		public function toDialectString(Dialect $dialect)
 		{
 			$fieldList = array();
@@ -448,6 +453,16 @@
 		public function dropFields()
 		{
 			$this->fields = array();
+			return $this;
+		}
+		
+		/**
+		 * @return SelectQuery
+		**/
+		public function dropField(SelectField $field)
+		{
+			if ($key = array_search($field, $this->fields))
+				unset($this->fields[$key]);
 			return $this;
 		}
 		
